# Realtime-LLM-Voice

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
cache/: __init__.py  response_cache.py
core/: __init__.py  events.py  orchestrator.py  state.py
desktop/: __init__.py  app.py  audio_io.py  ui.py
openclaw/: __init__.py
services/: __init__.py  audio_queue.py  chunker.py  llm.py  stt.py  tts.py  vad.py
tests/: test_audio_queue.py  test_chunker.py  test_orchestrator.py
transport/: __init__.py  audio_codec.py  websocket_handler.py
